[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Unit/MagDark.gd" type="Script" id=2]
[ext_resource path="res://Assets/units2/human/mage.png" type="Texture" id=3]
[ext_resource path="res://Sprites/misc/dagger.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.5, 48 )

[node name="Mag" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 73.5, 73 )
shape = SubResource( 1 )

[node name="HP_bar" parent="." index="2"]
margin_left = 27.0
margin_top = 6.0
margin_right = 77.0
margin_bottom = 11.0
rect_scale = Vector2( 2, 2 )
max_value = 75.0

[node name="StandingTimer" type="Timer" parent="." index="3"]

[node name="DamagePos" type="Position2D" parent="." index="4"]
visible = false

[node name="Sprite" type="Sprite" parent="DamagePos" index="0"]
position = Vector2( 23, 30 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="Sprite2" type="Sprite" parent="DamagePos" index="1"]
position = Vector2( 55, 45 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="Timer" type="Timer" parent="." index="5"]

[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
